--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,14 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.leaflet-container .leaflet-tile {
+  border: 0 !important;
+  box-shadow: none !important;
+}
+/* Add this to your global CSS */
+.leaflet-container .leaflet-tile {
+  background-color: #e5e3df !important; /* Match the tile background color */
+  border: none !important;
 }
